[package]
name = "hurricane_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
csv = "1.2.0"
image = "0.24.5"
resvg = "0.29.0"
serde = { version = "1.0.152", features = ["derive"] }
turtle = "1.0.0-rc.3"

# Compile turtle and other dependencies with optimizations
[profile.dev.package."*"]
opt-level = 3
