[package]
name = "wikiracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
reqwest = "0.11.14"
select = "0.6.0"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
